--- a/visualising_data.qmd
+++ b/visualising_data.qmd
@@ -151,7 +151,7 @@ bc3
 bc4
 ```
 
-## Histograms
+### Histograms
 
 In histograms the range of a variable is split into bis of. certain width, then the number of observations that fall within each bin is displayed.
 
@@ -207,7 +207,7 @@ As for our hypotheses, if we plot histograms of the body masses of the females, 
 ```{r}
 female_penguins |>
   ggplot(aes(x = body_mass_g)) +
-  geom_histogram(binwidth = 100, alpha = .8, fill = fill_colour1, colour = "grey80", linewidth = 0.5) +
+  geom_histogram(binwidth = 100, alpha = 1.0, fill = fill_colour1, colour = "grey80", linewidth = 0.5) +
   labs(x = "Body mass (g)",
        y = "Frequency") +
   facet_wrap(~species,ncol = 1) +
@@ -215,4 +215,59 @@ female_penguins |>
   theme(strip.background = element_blank())
 ```
 
-Unlike the bar charts, histograms also tell us about the shape and widths of the ditributions of the three data sets. When we do actually use a statistics test to make a decision about our hypotheses, these features of the data will be very important in helping us decide which test is the right one.
+Unlike the bar charts, histograms also tell us about the shape and widths of the distributions of the three data sets. When we do actually use a statistics test to make a decision about our hypotheses, these features of the data will be very important in helping us decide which test is the right one.
+
+### Box plots
+
+A very useful plot type for help in answering difference questions is the box and whisker plot, often just called a box plot.
+
+Here is a box plot of the penguins body massdata, with one box for each species:
+
+```{r}
+#| label: fig-box-plots
+#| fig-cap: "Anatomy of a box and whisker plot"
+#| 
+female_penguins |>
+  ggplot(aes(x = species, y = body_mass_g)) +
+  geom_boxplot(fill = fill_colour1) +
+  labs(x = "Species",
+       y = "Body mass (g)") +
+  annotate("text", x = 1.2, y = 2700, size = 3, label = "outlier", colour = "darkred") +
+  annotate("text", x = 1.20, y = 3100, size = 3, label = "whisker", colour = "darkred") +
+  annotate("text", x = 1.50, y = 3550, size = 3, label = "box", colour = "darkred") +
+  annotate("text", x = 2.75, y = 4480, size = 3, label = "25th percentile", colour = "darkred") +
+  annotate("text", x = 2.95, y = 4700, size = 3, label = "50th percentile (median)", colour = "darkred") +
+  annotate("text", x = 2.75, y = 4850, size = 3, label = "75th percentile", colour = "darkred") +
+  theme_cowplot()
+  
+```
+In box and whisker plots, or box plots for short, we are shown a summary of the distribution of the each data set and its cental location. 
+
+Each **box** shows:
+
+* the 75th percentile of the data: this is the top of the box
+* the 50th percentile of the dat ie the median: this is the thick black black line
+* the 25th percentile of the data: this is the bottom of the box
+* the interquartile range ie rnage that contains the middle 50% of the data. This is the range of values between the top of the box and the bottom.
+
+the **whiskers** show:
+
+* the range of the rest of the data that goes beyond the interquartile range - ie how far uop and down the range top and bottom quartiles spread. 
+
+any **outlier(s)** are shown by individual dots. Outliers are, more or less, jsut what the name says, daa values that are atypical of the rest of the data. 
+
+A box plot can also show:
+
+* whether there is a clear difference beteen the spread of values of the different catagories. This helps us decide whether or not to reject a null hypothesis about there being no difference. In @fig-box-plots we can see that the body masses of Gentoo penguins are clearly greater than those of the other two species, but that there is no clear indication from these data that there is any difference between those two. 
+
+
+* whether the distributions of the individual points  are approximately symmetric. It they are, then perhaps the points are normally distributed about their means. In that case it may be possible to use so-called *parametric* tests for difference such as t-tests and ANOVAs of one kind or another. If not, then we may have to use their less powerful *non-parametric* equivalents such as Mann-Whitney tests or Kruskal-Wallis tests. 
+
+We see in @fig-box-plots that all the boxes are of about the same width, meaning the spread of values (the variance) is about the same for each species and  that all the plots are more or less symmetric. There is only one outlier which isn't too far out, and all the medians are more or less in the centre of the boxes, as we would expect fo a symmetric distribution. This means that the data pluaisibly might be normally distributed. There is a better type of plot for determing normality, the quantile-quantile plot, but this quick check for normality from a box plot is a usual thing to be able to do.
+
+
+
+
+
+
+
