--- a/counts.qmd
+++ b/counts.qmd
@@ -1,7 +1,136 @@
 # Counts
 
+```{r}
+library(tidyverse)
+library(here)
+```
 
 
+## Chi-squared analysis of count data
+
+A chi-square analysis is used when our data are in the form of raw counts for two or more categorical groups eg pea plants with either yellow peas or green peas, survival rate of mice if they took drug A or took drug B, etc. Each independent observation must definitely belong to either one group or the other, and there are no replicates. That is, for each category we just have one count.
+
+What we do is compare the counts we got to some *expected* value according either to chance or to some prior theory.
+
+For example:
+
+-   If we were tossing a fair coin 1000 times we would *expect* 500 heads and 500 tails, ie heads and tails in the proportion 1:1. In reality, if the coin were fair, we would probably get roughly the same number of heads and tails, but not exactly 500 of each. How far from 50:50 would the proportion of heads and tails have to be before we would be justified in rejecting the idea that the coin is fair?
+
+-   If we threw a fair dice a large number of times we would *expect* each possible score, from 1 to 6, to occur the same number of times. ie each score would occur 1/6th of the time. In reality we would probably get each score *roughly* 1/6 of the time, but not exactly 1/6. How far from the expected proportions could the numbers of each score get before we would be justified in thinking that the dice was not fair?
+
+-   If the basic idea of Mendelian inheritance with independent assortment involving a single gene is correct, then we would expect that if we crossed a large number of pea plants that were heterozygous for yellow and green pea colour, with yellow being dominant, then the offspring would have yellow:green peas in the ratio 3:1 (plants with genotypes YY, Yy, yY would all have yellow seeds and only those with yy would have green seeds). In practice, if the inheritance *were* according to the simplest type of Mendelian inheritance (ie involving just one gene, amongst other things) we would probably get yellow:green offspring in a ratio that was *approximately* but not exactly 3:1. How far from 3:1 would the ratio need to be before we would justified in claiming that the outcome was inconsistent with the Mendelian prediction?
+
+```{r, echo = FALSE}
+myimages<-here("figures","mendelian_pea_plants.png")
+knitr::include_graphics(myimages)
+```
+
+## Chi-square goodness of fit test
+
+In a chi-square 'goodness of fit' test, we are testing data where we have a number of counts for each of two or more possible outcomes of some procedure (heads/tails, dice scores etc). We have an idea of how these counts should be distributed under some null hypothesis (the coin is fair, the dice is fair, genetic inheritance works in this or that way etc). The chi-square goodness of fit test tests how likely it is we would have got the counts we actually got if that null hypothesis were correct. We are testing how well our actual counts 'fit' the expected values.
+
+In a typical software implementation of the test, such as in R, we give it the counts we actually got for each possible outcome and also the expected proportion for each outcome. The test then gives us a p-value, a probability, for how likely it is that we would have got the counts we actually got, or counts even further from the null hypothesis, if that null hypothesis were correct. If this p-value is too small, and by that we usually mean less than 0.05, then we reject the null hypothesis.
+
+### Example
+
+Suppose we have crossed pea plants that were all heterozygous for yellow/green pea colour. In the F1 generation we get 176 offspring , of which 130 were yellow and 46 were green.
+
+The data here are raw counts, and an individual pea plant offspring contributes either to the yellow count or to the green count, but not to both.
+
+Our expected counts of yellow and green are found by simply dividing the total count of offspring, 176, in the ratio 3:1, giving us an expected 132 yellow pea plants and an expected 44 green pea plants in the offspring F1 generation.
+
+### Doing the chi-square test in R
+
+What we do in R is use the `chisq.test()` function to see how likely it is we would have got counts of 130 and 46 if the null hypothesis, with its expected counts in the ratio 3:1, were true.
+
+We do it like this:
+
+`chisq.test(c(130,46),p=c(0.75,0.25))`
+
+There are two arguments. The first is the counts we got, which we enter as a 'vector' `c(z,y,....)`, so we write `c(130,46)`. The second is a vector of the proportions we expect for the two counts, where these proportions should add up to one. So for our expected 3:1 ratio we enter `c(0.75,0.25)`.
+
+Let's do it: type the above function into the console window (bottom left). You will get an output something like this:
+
+```{r,echo=FALSE}
+chisq.test(c(130,46),p=c(0.75,0.25))
+```
+
+This output is typical of tests done in R. We get the 'test statistic' whose name varies depending on the test. Here it is called `X-squared`, pronounced `chi-squared`. This is a number that the test calculates, based on the data you have given it. For the most part, we don't need to worry about how it does that. Then there is the p-value, which is the probability of getting this test statistic if the null hypothesis were true.
+
+In this case, we see that the p-value is 0.73, which is large. We could very plausibly have got yellow:green numbers of 130 and 46 if the null hypothesis were true, so we cannot reject that null hypothesis. In other words, our data are consistent at the 5% significance level with the predictions of simple Mendelian inheritance.
+
+### Reporting the result in English
+
+In English, we might report this result as:
+
+*We found counts of 130 yellow plants and 46 green plants, which are consistent at the 5% significance level with the predictions of Mendelian inheritance (chi-squared test, X-squared = 0.12, p=0.73).*
+
+Note that we do not say we have proved Mendelian inheritance to be correct. We haven't. We never prove things in science. We haven't said anything about the truth of the null hypothesis. All we can say is whether our data are or are not consistent with the null hypothesis. In this case they are. We then report the test we used and the values of the test statistic and p-value. Other tests might give you other details to report too.
+
+### Exercises
+
+**Exercise 1**
+
+Suppose you tossed a fair coin 100 times and got 45 heads and 55 tails.
+
+-   Under a null hypothesis that the coin is fair, what would the expected numbers of heads and tails be?
+
+You use R to do a chi-square test of that null hypothesis. Here is the code to do that and the output it would give:
+
+```{r,echo=TRUE}
+chisq.test(c(45,55),p=c(0.5,0.5)) # we could leave out the second argument here
+```
+
+-   What do you conclude?
+
+-   How would you report the result?
+
+**Exercise 2**
+
+Suppose someone told you that the competence of scientists was linked to their astrological zodiac sign. I won't name all of these, but there are twelve of them: Pisces, Scorpio, Cancer etc. To test this hypothesis, you spend a lot of time on Primo and identify 240 scientists, currently active, that have each published at least five papers in high impact journals in the last year. All of these people, you presume, are successful scientists. You write to each of them and ask them their date of birth. Amazingly(!), all of them respond. You then assign each of them to a zodiac sign according to their birth date and get the following counts for each sign:
+
+In this code chunk we have typed out the counts and collected them as a vector, using the function \``` c()` ``. we have saved this under the name `stars`.
+
+```{r,echo = TRUE}
+stars<-c(22,20,17,22,20,19,18,21,19,22,23,17)
+```
+
+-   What would be a suitable null hypothesis in this investigation?
+-   What proportion of the total count would we expect for each star sign if this null were true?
+-   The data meet the criteria required for use of a chi-square goodness of fit test. How can we tell?
+-   Use the `chisq.test()` function to implement this test.
+-   On the basis of the output of the test, do you reject the null hypothesis?
+-   Report the result of the test in plain English.
+
+### Solutions
+
+**Solution 1**
+
+The expectation is that half the outcomes would be heads and half would be tails.
+
+The null hypothesis of this test is that heads and tails are equally likely, ie that the coin is fair. Under this null hypothesis the expected outcome is 50 heads and 50 tails. From the output of the R code we see that the p-value, the probability of getting an outcome as far or further from that, is 0.317. That is pretty high. Would you do anything if you knew that the probability of a bad (or worse) outcome was 0.317? In particular, this p-value is greater than 0.05, so we cannot reject the null hypothesis that the coin is fair. That is, even with a fair coin it is not at all unlikely that you would get head/tail numbers as different from 50/50 as 45/55 if you tossed the coin 100 times. That will happen about 1/3 of the time if you repeatedly do trials where you toss the coin 100 times.
+
+To report this result, you might say something like
+
+*From 100 coin tosses we got 45 heads and 55 tails. These counts are consistent at the 5% significance level with the coin being fair (chi-squared test, X-squared = 1, p=0.317).*
+
+**Solution 2**
+
+-   H0: There is no association between the astrological star sign of a researcher and their success in science (who knew?)
+-   One twelfth for each sign ie a researcher is as likely to have one star sign as any other.
+-   These are count data, there are at least five counts for every sign and the counts are independent - any individual researcher only contributes to one of the twelve counts.
+-   Note that we do not need to include the second `p=...` argument in this case since the default presumption, that all proportions are equal, is true here.
+
+```{r}
+chisq.test(stars)
+```
+
+-   We see that the p-value is almost one so we emphatically do not reject the null hypothesis.
+-   We find no evidence that star sign affects success in science (X-sq=2.29, df = 11, p=0.997)
+
+Note the degrees of freedom that is reported: df = 11. The degrees of freedom is the number of independent pieces of information. Here, given that we know the total number of researchers, only eleven of the individual counts are independent. Once they are known, the twelfth can be calculated.
+
+### Testing if Hardy Weinberg Equilibrium is satisfied
 ```{r, include = FALSE}
 library(tidyverse)
 library(here)
@@ -23,7 +152,7 @@ error_colour<-COL['red','full']
 
 Suppose we have a population of people in which there is a gene that has two alleles A and a, where A is dominant. Suppose that being homozygous in the recessive allele a means that the individual is affected by sickle cell anemia. Being heterozygous Aa means that the individual is not affected but is a carrier and may pass the a allele on to their progeny. Those who are homozygous in the dominant allele A are unaffected.
 
-## Observed Frequencies
+**Observed Frequencies**
 
 Suppose in a population of $N=1100$ people the observed numbers of each genotype are as follows:
 
@@ -44,7 +173,7 @@ N <- AA_o +Aa_o + aa_o # total population
 
 where the subscript letter $O$ denotes 'Observed'
 
-## Calculate allele frequencies
+**Calculate allele frequencies**
 
 Each person in the population carries two copies of the gene so the total number of alleles is $2N$. We use $p$ and $q$ to denote the proportion of these that are $A$ and $a$ alleles respectively.
 
@@ -76,7 +205,7 @@ q <- (2*aa_o + Aa_o) / (2 * N) # frequency of a allele
 p + q
 ```
 
-## Expected under HWE
+**Expected under HWE**
 
 Under Hardy-Weinberg equilibrium, a key assumption is that there is random mating among individuals in the population. This means that the probability of an individual having any of the three possible genotypes is the product of the frequencies of the two alleles present for that genotype.
 
@@ -105,7 +234,7 @@ Aa       | $2pq$ | $2pq \times N = 2\times 0.788\times 0.222 \times 1100 = 380$
 aa       | $q^2$ | $q^2 \times N = 0.222^2 \times 1100 = 54$
 
 
-## Calculate Chi-squared statistic
+**Calculate Chi-squared statistic**
 
 $$
 \begin{align}
@@ -119,7 +248,7 @@ chi_sq <- (AA_o-AA_e)^2 / AA_e + (Aa_o-Aa_e)^2 / Aa_e + (aa_o - aa_e)^2 / aa_e
 chi_sq
 ```
 
-## Calculate degrees of freedom
+**Calculate degrees of freedom**
 
 This is the number of independent pieces of information used in calculating the test statistics $\chi^2$. In problems like this it turns out to. be equal to the number of gneotypes minus the number of alleles, so in this case the answer is 3 - 2 = 1. The underlying reason for this is that the expected genotype numbers are determined by the allele frequencies p and q. Since these must add up to one, that means that if either p or q is known, then so is the other. Hence there is only one degree of freedom.
 
@@ -129,7 +258,7 @@ This is the number of independent pieces of information used in calculating the 
 df <- length(c(AA_o, Aa_o, aa_o)) - length(c("A", "a"))
 ```
 
-## Calculate p-value
+**Calculate p-value**
 
 ```{r}
 pchisq(chi_sq,df, lower.tail = FALSE)
@@ -144,7 +273,7 @@ chi_sq <- raw_result$statistic
 pchisq(chi_sq,1,lower.tail = FALSE)
 ```
 
-## Use built-in R function to calculate p-value
+**Use built-in R function to calculate p-value**
 ```{r}
 # not quite right
 # uses df = 2 when it should use df = 1
@@ -160,7 +289,6 @@ df <- data.frame(x1 = chisq_statistic, y1 = 0, x2 = chisq_statistic, y2 = dchisq
 
 pbase<- ggplot(data.frame(x=seq(0,10,0.1)), aes(x)) +
   geom_function(fun = dchisq, args=list(df = deg_freedom)) +
-  geom_segment(data = df, aes(x = x1, y = y1, xend = x2, yend = y2), linewidth = 0.2) +
     theme_void()
 
 p1 <- pbase +
@@ -178,6 +306,7 @@ p2 <- pbase +
                 geom = "area",
                 fill = fill_colour1,
                 args = list(df=deg_freedom)) +
+    geom_segment(data = df, aes(x = x1, y = y1, xend = x2, yend = y2), linewidth = 0.2) +
   annotate(geom = "text", x= 5, y = .15, label = "p-value =0.365")
 ```
 
